NetBSD Problem Report #50295

From christos@mb1.astron.com  Fri Oct  2 18:39:11 2015
Return-Path: <christos@mb1.astron.com>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id EC25DA5864
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  2 Oct 2015 18:39:10 +0000 (UTC)
Message-Id: <20151002173121.7996B247847@mb1.astron.com>
Date: Fri,  2 Oct 2015 17:31:21 +0000 (UTC)
From: christos@NetBSD.org
Reply-To: christos@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: clock_nanosleep(2) sets errno instead of returning error
X-Send-Pr-Version: 3.95

>Number:         50295
>Category:       kern
>Synopsis:       clock_nanosleep(2) sets errno instead of returning error
>Confidential:   no
>Severity:       serious
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Oct 02 18:40:00 +0000 2015
>Closed-Date:    Sun May 01 05:27:02 +0000 2016
>Last-Modified:  Sun May 01 05:27:02 +0000 2016
>Originator:     Christos Zoulas
>Release:        NetBSD 7.99.21
>Organization:
	Entropy Unlimited
>Environment:
System: NetBSD mb1.astron.com 7.99.21 NetBSD 7.99.21 (GENERIC) #47: Fri Oct 2 12:47:28 EDT 2015 christos@mb1.astron.com:/usr/src/sys/arch/amd64/compile/GENERIC amd64
Architecture: x86_64
Machine: amd64
>Description:
	check our man page, our code and the ToG man page.
>How-To-Repeat:
>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50295 CVS commit: src/sys/kern
Date: Fri, 2 Oct 2015 15:47:08 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Fri Oct  2 19:47:08 UTC 2015

 Modified Files:
 	src/sys/kern: kern_time.c syscalls.master

 Log Message:
 PR/50295: clock_nanotime() should not set errno, but return the error.


 To generate a diff of this commit:
 cvs rdiff -u -r1.180 -r1.181 src/sys/kern/kern_time.c
 cvs rdiff -u -r1.278 -r1.279 src/sys/kern/syscalls.master

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50295 CVS commit: src/lib/libc/sys
Date: Fri, 2 Oct 2015 15:52:50 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Fri Oct  2 19:52:50 UTC 2015

 Modified Files:
 	src/lib/libc/sys: nanosleep.2

 Log Message:
 PR/50295: Fix clock_nanosleep return value documentation.


 To generate a diff of this commit:
 cvs rdiff -u -r1.16 -r1.17 src/lib/libc/sys/nanosleep.2

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sat, 03 Oct 2015 01:12:47 +0000
State-Changed-Why:
Christos fixed it, good now? Pullup needed?


State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 01 May 2016 05:27:02 +0000
State-Changed-Why:
Feedback timeout.

much as errno sucks, functions that arbitrarily return error codes instead
are a blight.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.