PR/50295: clock_nanotime() should not set errno, but return the error.